# misis2024f-24-01-kuznetsov-m-a

./: .gitignore  CMakeLists.txt  README.txt  codeforces.id  main.cpp  status.md
OtherHomework/: StructComplex.cpp
prj.codeforces/: 0002a.cpp  0004a.cpp  0004c.cpp  0018a.cpp  0136a.cpp  0158a.cpp  0271a.cpp  0339b.cpp  0617a.cpp  0915a.cpp  0935b.cpp  0978a.cpp  0978b.cpp  1330a.cpp  1353c.cpp  1404a.cpp  1501a.cpp  1512b.cpp  1512c.cpp  1585a.cpp  1649a.cpp  1670b.cpp  1671a.cpp  1678a.cpp  1680b.cpp  1692c.cpp  1701a.cpp  1717b.cpp  1872a.cpp  1873b.cpp  1873c.cpp  1873d.cpp  2037a.cpp  2037b.cpp  2037c.cpp  39d.cpp  CMakeLists.txt  PROVERKA.txt
prj.lab/: CMakeLists.txt
prj.lab/StructComplex/: CMakeLists.txt  StructComplex.cpp  StructComplex.hpp
prj.lab/arrayd/: CMakeLists.txt  arrayd.cpp  arrayd.hpp  arrayd.tpp
prj.lab/arrayd/arraydT/: CMakeLists.txt  arraydT.cpp  arraydT.hpp
prj.lab/arrayt/: CMakeLists.txt  arrayt.hpp
prj.lab/complex/: CMakeLists.txt  complex.cpp  complex.hpp
prj.lab/marray/: CMakeLists.txt  marray.cpp  marray.hpp  marray.tpp
prj.lab/queuea/: queuea.cpp  queuea.hpp
prj.lab/ration/: CMakeLists.txt  ration.cpp
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.hpp
prj.lab/stacka/: stacka.cpp  stacka.hpp
prj.lab/stackl/: stackl.cpp  stackl.hpp
prj.test/: CMakeLists.txt  arrayd_test.cpp  arrayt_test.cpp  complex_doctest.cpp  complex_test.cpp  marray_test.cpp  queuea_test.cpp  ration_test.cpp  rational_doctest.cpp  rational_test.cpp  stacka_test.cpp  stackl_test.cpp  tests.cpp
