set(CMAKE_CXX_STANDARD 20)

add_executable(0002a 0002a.cpp)
add_executable(0004a 0004a.cpp)
add_executable(0004c 0004c.cpp)


add_executable(0018a 0018a.cpp)
add_executable(0039d 0039d.cpp)


add_executable(0271a 0271a.cpp)
add_executable(0339b 0339b.cpp)
add_executable(0617a 0617a.cpp)
add_executable(0978a 0978a.cpp)
add_executable(0978b 0978b.cpp)


add_executable(1330a 1330a.cpp)
add_executable(1353c 1353c.cpp)
add_executable(1404a 1404a.cpp)
add_executable(1512c 1512c.cpp)
add_executable(1670b 1670b.cpp)
add_executable(1717b 1717b.cpp)
add_executable(1872a 1872a.cpp)
add_executable(1873c 1873c.cpp)
add_executable(1873d 1873d.cpp)
