add_executable(complex_test complex_test.cpp)
add_executable(complex_doctest complex_doctest.cpp)
add_executable(rational_test rational_test.cpp)
add_executable(rational_doctest rational_doctest.cpp)
add_executable(arrayd_test arrayd_test.cpp)
add_executable(arrayd_doctest arrayd_doctest.cpp)

target_link_libraries(complex_test complex_l)
target_link_libraries(complex_doctest complex_l)
target_link_libraries(rational_test rational_l)
target_link_libraries(rational_doctest rational_l)
target_link_libraries(arrayd_test arrayd_l)
target_link_libraries(arrayd_doctest arrayd_l)

